--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <section>
-      <h1>WELCOME</h1>
-      <p>FALCON FASHION the sporty feel.</p>
-    <img src="images/red_jersey.jpg">
+      <h1>CONTACT</h1>
+      <p>FALCON FASHION is an apparel company with a sporty feel.</p>
     </section>
+       
 </body>
 
 
