--- a/mens.html
+++ b/mens.html
@@ -14,9 +14,10 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <section>
-      <h1>WELCOME</h1>
-      <p>FALCON FASHION the sporty feel.</p>
-    <img src="images/red_jersey.jpg">
+      <h1>MENS</h1>
+      <p>FALCON FASHION the sporty feel for him.</p>
+    <img src="images/red_jersey.jpg" style="width: 450px;height: 550px;">
+    <p>Tri coloured rugby jersey. $80.00</p>
     </section>
 </body>
 
