--- a/womens.html
+++ b/womens.html
@@ -14,10 +14,13 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <section>
-      <h1>WELCOME</h1>
-      <p>FALCON FASHION the sporty feel.</p>
-    <img src="images/red_jersey.jpg">
+      <h1>WOMENS</h1>
+      <p>FALCON FASHION the sporty feel for her.</p>
     </section>
+   <img src="images/red_jersey.jpg" style="width: 450px;height: 550px;">
+     <P>Rugby jersey for her.</P>
+    <img src="images/whiteVneck.jpg" style="width: 450px; height: 550px;">
+    <p>White V neck for her.</p>
 </body>
 
 
